# FastAPI-Piccolo-Template

./: .gitignore  .pdm-python  README.md  app.py  docker-compose.yml  main.py  piccolo_conf.py  piccolo_conf_test.py  pyproject.toml  requirements.txt  sample.env  settings.py
.build/: Dockerfile
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  lint.yml  update_dep.yml
accounts/: endpoints.py  piccolo_app.py  tables.py
home/: piccolo_app.py
